# LoL-Bot

./: .gitignore  CMakeLists.txt
models/: game_classes.txt
src/: detect.cpp  detect.hpp  events.hpp  input.cpp  input.hpp  main.cpp  screen.cpp  screen.hpp
utils/: CMakeLists.txt  sample_video.cpp
